--- a/Slack/FailuresToSlackTriggerTemplate.xaml
+++ b/Slack/FailuresToSlackTriggerTemplate.xaml
@@ -26,6 +26,7 @@
                         MinWidth="100"
                         VerticalAlignment="Center"
                         Margin="5,0,0,0"
+                        IsSynchronizedWithCurrentItem="True"
                         DisplayMemberPath="Name"
                         ItemsSource="{Binding Channels}"
                         SelectedValue="{Binding Channel}" />
