--- a/Config/GroundStationConfigDataTemplate.xaml
+++ b/Config/GroundStationConfigDataTemplate.xaml
@@ -12,6 +12,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:DaleGhent.NINA.GroundStation.Config"
     xmlns:util="clr-namespace:DaleGhent.NINA.GroundStation.Utilities"
+    xmlns:ntfysh="clr-namespace:DaleGhent.NINA.GroundStation.NtfySh"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ninactrl="clr-namespace:NINA.CustomControlLibrary;assembly=NINA.CustomControlLibrary"
     xmlns:rules="clr-namespace:NINA.Core.Utility.ValidationRules;assembly=NINA.Core"
@@ -883,6 +884,181 @@
                         </TabItem>
 
                     </TabControl>
+                </StackPanel>
+            </TabItem>
+
+            <TabItem Name="ntfy" Header="ntfy">
+                <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                        <TextBlock Text="Website: " />
+                        <TextBlock><Hyperlink NavigateUri="https://ntfy.sh" RequestNavigate="Hyperlink_RequestNavigate" TextDecorations="None">ntfy.sh</Hyperlink></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Default topic</TextBlock.Text>
+                            <TextBlock.ToolTip>The default ntfy topic to send messages to. If blank or not previously set, the topic defaults to be the first 8 characters of the currently-loaded NINA profile ID.</TextBlock.ToolTip>
+                        </TextBlock>
+                        <TextBox
+                            Width="400"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Text="{Binding NtfyShDefaultTopic}" />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>Default icon</TextBlock.Text>
+                            <TextBlock.ToolTip>The default ntfy icon to display with messages</TextBlock.ToolTip>
+                        </TextBlock>
+                        <TextBox
+                            Width="400"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Text="{Binding NtfyShDefaultIcon}" />
+                    </StackPanel>
+
+                    <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                        <TextBlock
+                            Width="110"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center">
+                            <TextBlock.Text>ntfy URL</TextBlock.Text>
+                            <TextBlock.ToolTip>The URL of the ntfy service</TextBlock.ToolTip>
+                        </TextBlock>
+                        <TextBox
+                            Width="400"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Text="{Binding NtfyShUrl}" />
+                    </StackPanel>
+
+                    <GroupBox Header="Authentication" Margin="0,10,0,0">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Margin="0,5,0,5" Text="Authentication is optional. It is required if your ntfy service is protected with a username and password or an access token. If all three items are configured here, access token overrides username and password authentication." />
+                            
+                            <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Access token</TextBlock.Text>
+                                    <TextBlock.ToolTip>Optional. User access token, if required</TextBlock.ToolTip>
+                                </TextBlock>
+                                <TextBox
+                                    Width="400"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding NtfyShToken}" />
+                            </StackPanel>
+
+                            <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Username</TextBlock.Text>
+                                    <TextBlock.ToolTip>Optional.Username to access the ntfy service</TextBlock.ToolTip>
+                                </TextBlock>
+                                <TextBox
+                                    Width="400"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding NtfyShUser}" />
+                            </StackPanel>
+
+                            <StackPanel Margin="0,10,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Password</TextBlock.Text>
+                                    <TextBlock.ToolTip>Required if a username is specified.</TextBlock.ToolTip>
+                                </TextBlock>
+                                <TextBox
+                                    Width="400"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding NtfyShPassword}" />
+                            </StackPanel>
+                        </StackPanel>
+                    </GroupBox>
+
+                    <GroupBox Margin="0,10,0,0" Header="Failure message template">
+                        <StackPanel Orientation="Vertical">
+                            <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Title</TextBlock.Text>
+                                </TextBlock>
+                                <TextBox
+                                    Width="400"
+                                    Margin="5,0,0,0"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding NtfyShFailureTitle}" />
+                            </StackPanel>
+
+                            <StackPanel Margin="0,0,0,0" Orientation="Vertical">
+                                <TextBlock Width="110" HorizontalAlignment="Left">
+                                    <TextBlock.Text>Message</TextBlock.Text>
+                                </TextBlock>
+                                <TextBox
+                                    MinWidth="515"
+                                    MinHeight="400"
+                                    MaxWidth="515"
+                                    MaxHeight="400"
+                                    Margin="0,5,0,0"
+                                    HorizontalAlignment="Left"
+                                    AcceptsReturn="True"
+                                    AcceptsTab="True"
+                                    HorizontalScrollBarVisibility="Visible"
+                                    Text="{Binding NtfyShFailureMessage}"
+                                    VerticalScrollBarVisibility="Visible" />
+                            </StackPanel>
+
+                            <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Tags</TextBlock.Text>
+                                </TextBlock>
+                                <TextBox
+                                    Width="400"
+                                    Margin="5,0,0,0"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    Text="{Binding NtfyShFailureTags}" />
+                            </StackPanel>
+
+                            <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                                <TextBlock
+                                    Width="110"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                    <TextBlock.Text>Priority</TextBlock.Text>
+                                </TextBlock>
+                                <ComboBox
+                                    Width="100"
+                                    Margin="5,0,0,0"
+                                    VerticalAlignment="Center"
+                                    VerticalContentAlignment="Center"
+                                    ItemsSource="{Binding Source={util:EnumBindingSource {x:Type ntfysh:NtfyShPriorityLevels}}}"
+                                    SelectedItem="{Binding NtfyShFailurePriority}"/>
+                            </StackPanel>
+
+                        </StackPanel>
+                    </GroupBox>
+
                 </StackPanel>
             </TabItem>
 
