Make configuration windows auto-width on drag

--- a/IpProtocols/SendUdpSetupView.xaml
+++ b/IpProtocols/SendUdpSetupView.xaml
@@ -18,7 +18,7 @@
     d:DataContext="{d:DesignInstance Type=local:SendUdp}"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" MinWidth="600">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -75,12 +75,9 @@
             <TextBox
                 Grid.Row="2"
                 Grid.Column="1"
-                Width="600"
                 Height="250"
-                MaxWidth="600"
-                MaxHeight="400"
                 Margin="10,3,10,2"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 AcceptsReturn="True"
                 AcceptsTab="True"
