--- a/DiscordWebhook/SendToDiscordWebhookSetupView.xaml
+++ b/DiscordWebhook/SendToDiscordWebhookSetupView.xaml
@@ -18,7 +18,7 @@
     d:DataContext="{d:DesignInstance Type=local:SendToDiscordWebhook}"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" MinWidth="600">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -39,12 +39,9 @@
             <TextBox
                 Grid.Row="0"
                 Grid.Column="1"
-                Width="600"
                 Height="250"
-                MaxWidth="600"
-                MaxHeight="400"
                 Margin="10,10,10,2"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 AcceptsReturn="True"
                 AcceptsTab="True"
@@ -70,17 +67,15 @@
                 <Label
                     Grid.Row="0"
                     Grid.Column="0"
-                    Margin="10,2,10,2"
+                    Margin="0,2,10,2"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Content="Title" />
                 <TextBox
                     Grid.Row="0"
                     Grid.Column="1"
-                    Margin="10,2,10,2"
-                    Width="600"
-                    MaxWidth="600"
-                    HorizontalAlignment="Left"
+                    Margin="10,2,0,2"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Center"
                     HorizontalScrollBarVisibility="Auto"
                     MaxLines="1"
@@ -90,19 +85,16 @@
                 <Label
                     Grid.Row="1"
                     Grid.Column="0"
-                    Margin="10,2,10,2"
+                    Margin="0,2,10,2"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
                     Content="Message" />
                 <TextBox
                     Grid.Row="1"
                     Grid.Column="1"
-                    Width="600"
                     Height="250"
-                    MaxWidth="600"
-                    MaxHeight="400"
-                    Margin="10,2,10,2"
-                    HorizontalAlignment="Left"
+                    Margin="10,2,0,2"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     AcceptsTab="True"
@@ -114,7 +106,7 @@
                 <Label
                     Grid.Row="2"
                     Grid.Column="0"
-                    Margin="10,2,10,2"
+                    Margin="0,2,10,2"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Content="Edge color" />
@@ -122,7 +114,7 @@
                     Grid.Row="2"
                     Grid.Column="1"
                     Width="88"
-                    Margin="10,2,10,2"
+                    Margin="10,2,0,2"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     SelectedColor="{Binding EmbedEdgeColor}"
