--- a/NtfySh/SendToNtfyShSetupView.xaml
+++ b/NtfySh/SendToNtfyShSetupView.xaml
@@ -19,7 +19,7 @@
     d:DataContext="{d:DesignInstance Type=local:SendToNtfySh}"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" MinWidth="600">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -44,9 +44,7 @@
                 Grid.Row="0"
                 Grid.Column="1"
                 Margin="10,2,10,2"
-                Width="600"
-                MaxWidth="600"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
                 HorizontalScrollBarVisibility="Auto"
                 MaxLines="1"
@@ -63,12 +61,9 @@
             <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
-                Width="600"
                 Height="250"
-                MaxWidth="600"
-                MaxHeight="400"
                 Margin="10,10,10,2"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 AcceptsReturn="True"
                 AcceptsTab="True"
@@ -88,9 +83,7 @@
                 Grid.Row="2"
                 Grid.Column="1"
                 Margin="10,2,10,2"
-                Width="600"
-                MaxWidth="600"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
                 HorizontalScrollBarVisibility="Auto"
                 MaxLines="1"
