--- a/Slack/SendToSlackSetupView.xaml
+++ b/Slack/SendToSlackSetupView.xaml
@@ -17,7 +17,7 @@
     d:DataContext="{d:DesignInstance Type=local:SendToSlack}"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical">
+    <StackPanel Orientation="Vertical" MinWidth="600">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -56,12 +56,9 @@
             <TextBox
                 Grid.Row="1"
                 Grid.Column="1"
-                Width="600"
                 Height="250"
-                MaxWidth="600"
-                MaxHeight="400"
                 Margin="10,10,10,2"
-                HorizontalAlignment="Left"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Top"
                 AcceptsReturn="True"
                 AcceptsTab="True"
